Fixed nav name and logo overlap.

--- a/src/app/layout/navbar/navbar.component.css
+++ b/src/app/layout/navbar/navbar.component.css
@@ -39,7 +39,7 @@
 
   padding-right: 100%;
   padding-left: 5px;
-  margin-right: 25%;
+  /* margin-right: 25%; */
 }
 
 
